# safe_rm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TODO.md  actual_rm.c  build.sh  complete_remove.c  daemon.c  mv_lib.c  mv_lib.h  proctitle.c  proctitle.h  restore.c  restore_main.c  safe_delete.c  safe_rm.c  safe_rm.h  tarlib.c  tarlib.h  utils.c  zrestore.c  zrestore.h  zrestore_main.c
.github/workflows/: build.yml  release.yml
complete/: complete.fish  complete.sh
complete/fish/: complete.fish  restore.fish  safe_rm.fish  zrestore.fish
complete/sh/: complete.sh  restore.sh  safe_rm.sh  zrestore.sh
src/: daemon.rs  lib.rs  restore.rs  safe_rm.rs  zrestore.rs
