[package]
name = "safe_rm"
version = "1.0.0"
edition = "2021"
authors = ["Zhang Zhiyu"]
description = "Safe rm with trash bin and TUI restore tool"

[[bin]]
name = "safe_rm"
path = "src/safe_rm.rs"

[[bin]]
name = "restore"
path = "src/restore.rs"

[[bin]]
name = "zrestore"
path = "src/zrestore.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
tar = "0.4"
flate2 = "1.0"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
dirs = "5.0"
tempfile = "3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"
regex = "1.10"
notify = "6.1"
crossbeam-channel = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
whoami = "1.4"
rayon = "1.10"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
